# protein_sizer

./: LICENSE  README.md  pyproject.toml
scripts/: protein_size.py
sizer/: sizer.py
