[tool.poetry]
name = "sizer"
version = "0.1.0"
description = "Get accurate MW estimates from SEC data."
authors = ["Aron Broom <broomsday@gmail.com>"]
readme = "README.md"
packages = [{include = "sizer"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
tqdm = "^4.65.0"
pandas = "^2.1.4"
biotite = "^0.39.0"
matplotlib = "^3.8.2"
numpy = "^1.26.3"

[tool.poetry.group.test.dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/broomsday/protein_sizer"